fix: refactor to use virtual threads for executors and enhance logging in various components